# geoshop-front

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  angular.json  default_settings.py  docker-compose.yml  eslint.config.mjs  karma.conf.js  oidc.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  urls.py  vite.config.mts  wsgi.py
.github/: dependabot.yml
.github/workflows/: dependabot_pr.yml  release.yml  tests.yml
api/: admin.py  apps.py  helpers.py  models.py  serializers.py  views.py
api/management/commands/: fixturize.py  prepareusertests.py  seed.py
api/migrations/: 0002_auto_20200731_0904.py  0003_auto_20200731_1203.py  0004_auto_20200731_1339.py  0005_auto_20200803_1706.py  0006_auto_20200805_0843.py  0007_auto_20200805_1138.py  0008_orderitem_extract_result.py  0009_auto_20200811_1645.py  0010_auto_20200814_1212.py  0011_auto_20200814_1559.py  0012_auto_20201005_1620.py  0013_auto_20201009_1513.py  0014_auto_20201014_1549.py  0015_product_free_when_subscribed.py  0016_contact_subscribed.py  0017_auto_20201209_0807.py  0018_orderitem_status.py  0019_auto_20201218_0902.py  0020_auto_20210108_1749.py  0029_auto_20210604_1417.py  0047_alter_document_link_and_more.py  0048_remove_order_status_remove_product_status_and_more.py  0048_remove_product_status_product_product_status.py  0049_orderitem_download_guid_alter_order_order_status_and_more.py  0049_remove_order_status_order_order_status.py
api/static/api/: admin-extra.css
api/templates/: email_admin.html  email_base_template.html  email_download_ready.html  email_quote_done.html  email_user_change.html  email_user_confirm.html  email_user_footer.html  email_validation_needed.html  email_welcome_user.html  metadata.html  metadata_base_template.html  metadata_simple.html  oidc_user.html
api/templates/admin/: login.html
api/templates/rest_framework/: api.html  login.html
api/tests/: factories.py  test_extract.py  test_order.py  test_pricing.py  test_product_group.py  test_response_file.py
e2e/: README.md  test.py  test_i18n_login.py  test_order.py
e2e/src/: app.e2e-spec.ts
locale/de/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
nginx/: default.conf
resources/db/: 01_init_db.sql
src/: index.html  palette-lighter.scss  palette.scss  polyfills.ts  styles.scss  test-setup.ts  theme.scss
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  constants.service.spec.ts  constants.service.ts  constants.ts
src/environments/: environment.ts
src/locale/: messages.de.xlf  messages.en.xlf  messages.xlf
(+216 files in other folders)
