[tool.poetry]
name = "geoshop-back"
version = "0.1.0"
description = "Backend for the geoshop service"
authors = ["Your Name <you@example.com>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "*"
attrs = "*"
Babel = "*"
certifi = "*"
cffi = "*"
charset-normalizer = "*"
cryptography = "*"
defusedxml = "*"
Django = "^5"
django-allauth = "*"
django-cors-headers = "*"
django-filter = "*"
django-health-check = "*"
django-money = "*"
djangorestframework = "*"
djangorestframework-gis = "*"
djangorestframework-simplejwt = "*"
drf-spectacular = "*"
gunicorn = "*"
idna = "*"
inflection = "*"
jsonschema = "*"
jsonschema-specifications = "*"
Markdown = "*"
oauthlib = "*"
psycopg2 = "*"
pycparser = "*"
PyJWT = {extras = ["crypto"], version = "*"}
py-moneyed = "*"
python3-openid = "*"
python-dotenv = "*"
pytz = "*"
PyYAML = "*"
referencing = "*"
requests = "*"
requests-oauthlib = "*"
rpds-py = "*"
setuptools = "*"
sqlparse = "*"
typing-extensions = "*"
Unidecode = "*"
uritemplate = "*"
urllib3 = "*"
whitenoise = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
