[tool.poetry]
name = "geoshop-back"
version = "0.1.0"
description = "Backend for the geoshop service"
authors = ["Andrey Rusakov <andrey.rusakov@camptocamp.com>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.8.1"
attrs = "^24.2.0"
babel = "^2.16.0"
certifi = "^2024.7.4"
cffi = "^1.17.0"
charset-normalizer = "^3.4.0"
cryptography = "^43.0.3"
defusedxml = "^0.7.1"
django-allauth = "^64.0.0"
django-cors-headers = "^4.6.0"
django-filter = "^24.3"
django-health-check = "^3.18.3"
django-money = "^3.5.3"
djangorestframework = "^3.15.2"
djangorestframework-gis = "^1.0"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
gunicorn = "^23.0.0"
idna = "^3.8"
inflection = "^0.5.1"
jsonschema = "^4.23.0"
jsonschema-specifications = "^2023.12.1"
Markdown = "^3.6"
oauthlib = "^3.2.2"
psycopg2-binary = "^2.9.10"
pycparser = "^2.22"
PyJWT = "^2.9.0"
py-moneyed = "^3.0"
python3-openid = "^3.2.0"
python-dotenv = "^1.0.1"
pytz = "^2024.1"
PyYAML = "^6.0.2"
referencing = "^0.35.1"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
rpds-py = "^0.21.0"
sqlparse = "^0.5.2"
typing-extensions = "^4.12.2"
Unidecode = "^1.3.8"
uritemplate = "^4.1.1"
urllib3 = "^2.2.2"
whitenoise = "^6.8.2"
Django = "^5.1"
mozilla-django-oidc = "^4.0.1"
Authlib = "^1.3.2"
django-extended-ol = "1.0.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
